A ARROW FUNCTION TAVA ERRADAAAAAAAAAAAAAAAAAAA

--- a/parte.html
+++ b/parte.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <script src="parte.js" defer></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap');
     </style>
@@ -24,26 +24,5 @@
         </div> 
     </div>
     
-    <script>
-        var telefoneInput = document.getElementById('telefone');
-
-        telefoneInput.addEventListener('input', function(event) {
-            var inputValue = event.target.value.replace(/\D/g, ''); // Remove todos os caracteres não numéricos
-            var formattedValue = '';
-
-            // Aplica a máscara
-            if (inputValue.length > 0) {
-                formattedValue = '(' + inputValue.substring(0, 2);
-            }
-            if (inputValue.length > 2) {
-                formattedValue += ') ' + inputValue.substring(2, 7);
-            }
-            if (inputValue.length > 6) {
-                formattedValue += '-' + inputValue.substring(7, 11);
-            }
-
-            event.target.value = formattedValue;
-        });
-    </script>
 </body>
 </html>
