fazendo o criar link do zap e copiar

--- a/parte.html
+++ b/parte.html
@@ -19,7 +19,7 @@
         <h1>Gerador de Link<p>t</p> <img width="30px" src="whatsapp.svg" alt=""></h1><br>
         <div class="container-filho">
             <input id="telefone" placeholder="Telefone">
-            <button linkZap style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
+            <button onclick="criaLink()" linkZap style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
             <button enviar style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
         </div> 
     </div>
