NAO AGUENTO MAIS 14/05
Quando o número estiver válido, alterar a cor do input. FEITO
Gerar link . ARRUMAR
Nova div com link. FEITO
Desabilitar a seleção do texto que exibe o link gerado.  FEITO

--- a/parte.html
+++ b/parte.html
@@ -21,6 +21,8 @@
             <input id="telefone" placeholder="Telefone">
             <button onclick="criaLink()" linkZap style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
             <button enviar style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
+            <div id="linkCopiado" style="display: none;"></div>
+            <div id="texto" style="display: none;">
         </div> 
     </div>
     
