--- a/parte.html
+++ b/parte.html
@@ -21,7 +21,7 @@
             <input id="telefone" placeholder="Telefone">
             <button onclick="criaLink()" linkZap style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
             <button enviar style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
-            <div id="linkCopiado" style="display: none;"></div>
+            <div onclick="copiaLink()" id="linkCopiado" style="display: none;"></div>
             <div id="texto" style="display: none;">
         </div> 
     </div>
