pq q ele nao quer reconhecer o formatação ?????
só falta 2 coisas q odio

--- a/parte.html
+++ b/parte.html
@@ -19,11 +19,11 @@
         <h1>Gerador de Link<p>t</p> <img width="30px" src="whatsapp.svg" alt=""></h1><br>
         <div class="container-filho">
             <input id="telefone" placeholder="Telefone">
-            <button onclick="criaLink()" linkZap style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
-            <button onclick="abreJanela()" enviar style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
+            <button onclick="criaLink()" id="linkZap" style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
+            <button id="abrejanela" style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
             <div onclick="copiaLink()" id="linkCopiado" style="display: none;"></div>
             <div id="texto" style="display: none;">
-        </div> 
+            
     </div>
     
 </body>
