--- a/parte.html
+++ b/parte.html
@@ -20,7 +20,9 @@
         <div class="container-filho">
             <input id="telefone" placeholder="Telefone">
             <button onclick="criaLink()" id="linkZap" style="border: 2px solid black; border-radius: 5px;"><i style="color:white" class="fas fa-link"></i></button>
-            <button id="abrejanela" style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
+            <a id="abreLink">
+                <button id="abrejanela" style="border: 2px solid black; border-radius: 5px;"><i class="fas fa-paper-plane"></i></button>
+            </a>
             <div onclick="copiaLink()" id="linkCopiado" style="display: none;"></div>
             <div id="texto" style="display: none;">
             
